samples/_failures_safe/1761595930_3376b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a04476a.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_9a04476a.c:166:5: error: expected identifier at end of input
  166 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_9a04476a.c:166:5: error: expected declaration or statement at end of input
